tests/paczka1/fuzzy1/28856467.err
Error in line 7: jzFNl A893 27,9
Error in line 25: 3k2P4 A276 57,5
Error in line 37: rPVjFN A893 87,5
